# aptos-tontine

./: README.md
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/: GlobalState.tsx  MyRoutes.tsx  constants.tsx  utils.ts
frontend/src/api/: helpers.ts  index.ts
frontend/src/api/hooks/: useGetAccountResource.ts  useGetAccountResources.ts  useGetAnsName.ts  useGetMemberStatuses.ts  useGetOperatorAddressOfStakingPool.ts  useGetOverallStatus.ts  useGetStakeData.ts  (+1 more)
frontend/src/components/: ConfigTable.tsx  ConnectWalletComponent.tsx  ContributionTable.tsx  CreateTontine.tsx  HomeActions.tsx  MemberInfoTable.tsx  PrimaryActions.tsx  RewardsInfo.tsx  SelectableTooltip.tsx  TontineActions.tsx  TontineDisplay.tsx  TontineInfo.tsx  TontineList.tsx  TontineListCard.tsx  TopLevelActions.tsx  VestingTimeline.tsx
frontend/src/layouts/: MainLayout.tsx
move/: .gitignore  Move.toml  Prover.toml  README.md
move/sources/: tontine.move  tontine.spec.move
processor/: .gitignore  README.md  api.py  config.py  create_table.py  main.py  my_parser.py  parser.py  processor.py  pyproject.toml  table.py  tables.py  tontine-processor.service  tontine_parser.py
processor/aptos/indexer/v1/: raw_data_pb2.py  raw_data_pb2.pyi  raw_data_pb2_grpc.py
processor/aptos/transaction/testing1/v1/: transaction_pb2.py  transaction_pb2.pyi
processor/aptos/util/timestamp/: timestamp_pb2.py  timestamp_pb2.pyi
processor/config/: example.yaml  mainnet.yaml  testnet.yaml
processor/deployment/: tontine-processor-mainnet.service  tontine-processor-testnet.service  tontine-processor.service
(+2 files in other folders)
