[tool.poetry]
name = "tontine-processor"
version = "0.1.0"
description = "Processor for the tontine module"
authors = ["Daniel Porteous <dport@aptoslabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.53.0"
PyYAML = "^6.0"
SQLAlchemy = "^2.0.9"
grpcio-tools = "^1.53.0"
protobuf = "^4.22.3"
pydantic = "^1.10.7"
flask = "^2.3.2"
flask-cors = "^3.0.10"
aptos-indexer-protos = "^0.1.0"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.53.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.4.2"]
build-backend = "poetry.core.masonry.api"
